# Youngnam_Robot_Chess

./: .gitignore  README.md
src/cobot2/: package.xml  setup.cfg  setup.py
src/cobot2/cobot2/: STT.py  UI.html  data.json  main.py  miccheck.py  miccontroller.py  onrobot.py  openai.env  robot_action.py  run_voice.sh  stockfish.py  vision_db.py  voice_control_node.py
src/cobot2/launch/: chess_system.launch.py  cv_chess_recognition.launch.py  voice_control.launch.py
src/cobot2_interfaces/: CMakeLists.txt  package.xml
src/cobot2_interfaces/action/: MoveChessPiece.action
src/cobot2_interfaces/srv/: StockfishMove.srv
